<resources>
    <string name="app_name">GrocerGo Admin REV</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="sign_up">Sign Up</string>
    <string name="email">Email</string>
    <string name="fullname">Fullname</string>
    <string name="signUpText">Already have an account?</string>
    <string name="loginText">Don\'t have an account?</string>
    <string name="supplyStock"><![CDATA[Supply & Stock]]></string>
    <string name="courier">Courier</string>
    <string name="tracking">Tracking</string>
    <string name="settings">Settings</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="trackingStatus">Tracking Status</string>
    <string name="current_tracking_status">Current Tracking Status:</string>
    <string name="box">Box</string>
    <string name="delivered">Delivered</string>
    <string name="on_going_order">On-going Order</string>
    <string name="delivered_order">Delivered Order</string>
    <string name="uid">UID</string>
    <string name="add_courier">Add Courier</string>
    <string name="contact_number">Contact Number</string>
    <string name="insert_data">Insert Data</string>
    <string name="cancel_add">Cancel Add</string>
    <string name="supplier">Supplier</string>
    <string name="update_courier">Update Courier</string>
    <string name="update_data">Update Data</string>
    <string name="cancel_update">Cancel Update</string>
    <string name="add_supplier">Add Supplier</string>
    <string name="bintang_timurlangit_gmail_com">bintang.timurlangit@gmail.com</string>
    <string name="_70001_bayam">70001 - Bayam</string>
    <string name="bintang_timurlangit">Bintang Timurlangit</string>
    <string name="add_new_inventory">Add New Inventory</string>
    <string name="supplier_name">Supplier Name</string>
    <string name="item_id">Item ID</string>
    <string name="item_price">Item Price</string>
    <string name="item_stock">Item Stock</string>
    <string name="item_image">Item Image:</string>
    <string name="title_activity_tracking_view_payment_confirmation">
        TrackingViewPaymentConfirmation
    </string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="item_list">Item List</string>
    <string name="sisa_barang_5">Sisa Barang: 5</string>
    <string name="rp_17_000_00">Rp. 17.000,00</string>
    <string name="add_new_inventory_alt">Add New Inventory</string>
    <string name="payment_confirmation">Payment Confirmation</string>
</resources>