<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="14dp"
            android:orientation="vertical"
            android:padding="20dp">

            <TextView
                android:id="@+id/title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="28dp"
                android:layout_marginBottom="30dp"
                android:fontFamily="@font/poppins_bold"
                android:text="@string/update_courier"
                android:layout_gravity="center"
                android:textSize="28sp" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/uid"
                android:textColor="#546e7a"/>

            <EditText
                android:id="@+id/courierShow_id"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:text=""
                android:padding="10dp"
                android:layout_marginBottom="10dp"
                android:inputType="none"
                android:enabled="false" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Name"
                android:textColor="#546e7a"/>

            <EditText
                android:id="@+id/courierUpdate_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:padding="10dp"
                android:layout_marginBottom="10dp"
                android:inputType="text"/>

            <TextView
                android:id="@+id/textView4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/contact_number"
                android:textColor="#546e7a"/>

            <EditText
                android:id="@+id/courierUpdate_phone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:padding="10dp"
                android:layout_marginBottom="10dp"
                android:inputType="phone"/>

            <Button
                android:id="@+id/updateBtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/update_data"
                android:textColor="#fff"
                android:enabled="true"
                android:backgroundTint="@color/brown" />

            <Button
                android:id="@+id/cancelBtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/cancel_update"
                android:textColor="#fff"
                android:backgroundTint="@color/brown" />
        </LinearLayout>
    </ScrollView>
</RelativeLayout>