<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="14dp"
            android:orientation="vertical"
            android:padding="20dp">

            <TextView
                android:id="@+id/title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="28dp"
                android:layout_marginBottom="30dp"
                android:fontFamily="@font/poppins_bold"
                android:text="@string/add_new_inventory"
                android:layout_gravity="center"
                android:textSize="28sp" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Supplier ID"
                android:textColor="#546e7a"/>

            <com.z2wenfa.spinneredittext.SpinnerEditText
                android:id="@+id/supplierSpinner_id"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_marginBottom="10dp"
                android:enabled="true"
                android:inputType="number"
                android:padding="10dp"
                tools:ignore="SpeakableTextPresentCheck" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/supplier_name"
                android:textColor="#546e7a"/>

            <EditText
                android:id="@+id/supplierAdd_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:padding="10dp"
                android:layout_marginBottom="10dp"
                android:inputType="text" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Supplier Email"
                android:textColor="#546e7a"/>

            <EditText
                android:id="@+id/supplierAdd_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:padding="10dp"
                android:layout_marginBottom="10dp"
                android:inputType="textEmailAddress"/>

            <TextView
                android:layout_marginTop="50dp"
                android:id="@+id/textView5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/item_id"
                android:textColor="#546e7a"/>

            <EditText
                android:id="@+id/itemAdd_id"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:padding="10dp"
                android:layout_marginBottom="10dp"
                android:inputType="number"/>

            <TextView
                android:id="@+id/textView6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Item Name"
                android:textColor="#546e7a"/>

            <EditText
                android:id="@+id/itemAdd_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:padding="10dp"
                android:layout_marginBottom="10dp"
                android:inputType="text"/>

            <TextView
                android:id="@+id/textView7"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/item_stock"
                android:textColor="#546e7a"/>

            <EditText
                android:id="@+id/itemAdd_stock"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:padding="10dp"
                android:layout_marginBottom="10dp"
                android:inputType="number"/>

            <TextView
                android:id="@+id/textView8"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/item_price"
                android:textColor="#546e7a"/>

            <EditText
                android:id="@+id/itemAdd_price"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:padding="10dp"
                android:layout_marginBottom="10dp"
                android:inputType="number"/>

            <TextView
                android:id="@+id/itemImage_name"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="20dp"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:layout_weight="0.5"
                android:text="@string/item_image"
                android:textColor="#546e7a"/>

            <Button
                android:id="@+id/uploadBtn"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:clickable="true"
                android:layout_marginTop="-50dp"
                android:text="Upload Image"
                android:textColor="#fff"
                android:enabled="true"
                android:backgroundTint="@color/brown" />

            <ImageView
                android:id="@+id/itemImageView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp" />

            <Button
                android:id="@+id/insertBtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/insert_data"
                android:textColor="#fff"
                android:enabled="true"
                android:backgroundTint="@color/brown" />

            <Button
                android:id="@+id/cancelBtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/cancel_add"
                android:textColor="#fff"
                android:backgroundTint="@color/brown" />
        </LinearLayout>
    </ScrollView>
</RelativeLayout>