<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingLeft="10dp"
    android:paddingRight="10dp"
    android:paddingTop="3dp"
    android:paddingBottom="3dp">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardCornerRadius="4dp"
            android:elevation="14dp"
            android:id="@+id/supplierCardView"
            android:layout_marginBottom="2dp">

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="8dp">

                <TextView
                    android:id="@+id/supplier_name_text"
                    android:text="@string/bintang_timurlangit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="3dp"
                    android:textSize="16dp"
                    android:textColor="#2196f3"/>

                <TextView
                    android:id="@+id/supplier_id_text"
                    android:text="61723"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="12dp"
                    android:textColor="#878586"/>

                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <TextView
                            android:id="@+id/supplier_email_text"
                            android:text="@string/bintang_timurlangit_gmail_com"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textSize="10dp" android:textColor="#aeaeae"/>

                        <TextView
                            android:visibility="visible"
                            android:layout_alignParentRight="true"
                            android:id="@+id/supplier_item_id_text"
                            android:text="@string/_70001_bayam"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textSize="10dp"
                            android:textColor="#aeaeae"/>

                    </RelativeLayout>
                </LinearLayout>
            </LinearLayout>
        </androidx.cardview.widget.CardView>
    </ScrollView>
</LinearLayout>