<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:fontFamily="@font/poppins_bold"
        android:text="@string/tracking"
        android:textSize="28sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <ImageView
        android:contentDescription="@string/box"
        android:id="@+id/boxLogo"
        android:layout_width="230dp"
        android:layout_height="230dp"
        android:layout_marginTop="72dp"
        android:src="@drawable/ic_tracking_box"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/title"
        app:tint="@color/brown" />

    <TextView
        android:id="@+id/textCurrent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="240dp"
        android:fontFamily="@font/poppins_bold"
        android:text="@string/current_tracking_status"
        android:textColor="#000000"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/boxLogo" />

    <Spinner
        android:contentDescription="@string/tracking"
        android:id="@+id/spinnerDropdownTracking"
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:layout_marginTop="44dp"
        android:spinnerMode="dropdown"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/textCurrent" />

    <Button
        android:id="@+id/viewTrackingButton"
        android:layout_width="300dp"
        android:layout_height="60dp"
        android:layout_marginTop="72dp"
        android:background="@drawable/rounded_button_brown"
        android:fontFamily="@font/poppins_medium"
        android:text="View"
        android:textColor="#FFFFFF"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/spinnerDropdownTracking" />

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottomNavigation"
        android:layout_width="match_parent"
        android:layout_height="72dp"
        android:background="#FFFFFF"
        app:labelVisibilityMode="unlabeled"
        app:itemIconSize="50dp"
        app:menu="@menu/bottom_nav_menu"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>